force-app/main/default/objects/breg_Batch_Job_Execution__c/breg_Batch_Job_Execution__c.object-meta.xml
<CustomObject>
    <description>Universal object for storing batch job execution results and logs</description>
    <label>Batch Job Execution</label>
    <nameField>
        <displayFormat>BJE-{0000000}</displayFormat>
        <label>Execution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Job Executions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>