force-app/main/default/objects/breg_Batch_Job_Execution__c/fields/breg_Delinquency_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>breg_Delinquency_Due_Date__c</fullName>
    <description>Final due date for entity to respond before involuntary dissolution</description>
    <label>Delinquency Due Date</label>
    <type>Date</type>
</CustomField>