force-app/main/default/objects/breg_Batch_Job_Execution__c/fields/breg_Delinquency_Notice_Date__c.field-meta.xml
<CustomField>
    <fullName>breg_Delinquency_Notice_Date__c</fullName>
    <description>Date when the Intent to Dissolve notice was sent to the entity</description>
    <label>Delinquency Notice Date</label>
    <type>Date</type>
</CustomField>