force-app/main/default/objects/breg_Batch_Job_Execution__c/fields/breg_Execution_Status__c.field-meta.xml
<CustomField>
    <fullName>breg_Execution_Status__c</fullName>
    <label>Execution Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>