force-app/main/default/objects/breg_Batch_Job_Execution__c/fields/breg_Involuntary_Dissolution_Notice_Date__c.field-meta.xml
<CustomField>
    <fullName>breg_Involuntary_Dissolution_Notice_Date__c</fullName>
    <description>Date when the Involuntary Dissolution notice was sent to the entity</description>
    <label>Involuntary Dissolution Notice Date</label>
    <type>Date</type>
</CustomField>