force-app/main/default/objects/breg_Batch_Job_Execution__c/fields/breg_Is_Preview_Mode__c.field-meta.xml
<CustomField>
    <fullName>breg_Is_Preview_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Preview Mode</label>
    <type>Checkbox</type>
</CustomField>