force-app/main/default/objects/breg_Batch_Job_Execution__c/fields/breg_Job_Name__c.field-meta.xml
<CustomField>
    <fullName>breg_Job_Name__c</fullName>
    <description>Name of the batch job class that was executed</description>
    <label>Job Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>