force-app/main/default/objects/breg_Batch_Job_Execution__c/fields/breg_Quarter__c.field-meta.xml
<CustomField>
    <fullName>breg_Quarter__c</fullName>
    <label>Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>