force-app/main/default/objects/breg_Batch_Job_Execution__c/fields/breg_Results__c.field-meta.xml
<CustomField>
    <fullName>breg_Results__c</fullName>
    <description>Detailed results and summary information from the batch job execution</description>
    <label>Results</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>