force-app/main/default/objects/breg_Batch_Job_Execution__c/fields/breg_Run_Id__c.field-meta.xml
<CustomField>
    <fullName>breg_Run_Id__c</fullName>
    <description>Unique identifier for the batch job execution</description>
    <externalId>true</externalId>
    <label>Run ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>