force-app/main/default/objects/breg_Batch_Job_Execution__c/fields/breg_Status_1_Count__c.field-meta.xml
<CustomField>
    <fullName>breg_Status_1_Count__c</fullName>
    <description>Count of entities moved to Status 1 (1 year delinquent) during batch execution</description>
    <label>Status 1 Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>