force-app/main/default/objects/breg_Batch_Job_Execution__c/fields/breg_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>breg_Timestamp__c</fullName>
    <description>Date and time when the batch job finished execution</description>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>