force-app/main/default/objects/breg_Batch_Job_Execution__c/fields/breg_Total_Count__c.field-meta.xml
<CustomField>
    <fullName>breg_Total_Count__c</fullName>
    <description>Total number of records processed during batch execution</description>
    <label>Total Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>