force-app/main/default/objects/breg_Batch_Job_Execution__c/fields/breg_User__c.field-meta.xml
<CustomField>
    <fullName>breg_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who initiated the batch job</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Batch Job Executions</relationshipLabel>
    <relationshipName>breg_Batch_Job_Executions</relationshipName>
    <type>Lookup</type>
</CustomField>