force-app/main/default/objects/breg_Batch_Job_Execution__c/fields/breg_Year__c.field-meta.xml
<CustomField>
    <fullName>breg_Year__c</fullName>
    <label>Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>