force-app/main/default/objects/breg_Batch_Job_Execution__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>breg_Timestamp__c</columns>
    <columns>breg_Total_Count__c</columns>
    <columns>breg_User__c</columns>
    <columns>breg_Job_Name__c</columns>
    <columns>breg_Run_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>